Subclass FDWaveformView to create property observers for realtime positioning of the preview buttons. Move position(of:) into this subclass.

--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -174,7 +174,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bwd-bB-yIj" userLabel="Waveform Container">
                                 <rect key="frame" x="20" y="175.5" width="280" height="117"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7J2-20-QTO" customClass="FDWaveformView" customModule="Stingtk" customModuleProvider="target">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7J2-20-QTO" customClass="WaveformView" customModule="Stingtk" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="42" width="280" height="75"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
